WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253660
REGRESSION(
261382@main
): [macOS] TestWebKitAPI.WebKit.ResponsivenessTimerCrash is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=253660
Summary
REGRESSION(261382@main): [macOS] TestWebKitAPI.WebKit.ResponsivenessTimerCras...
Dawn Morningstar
Reported
2023-03-09 10:42:57 PST
TestWebKitAPI.WebKit.ResponsivenessTimerCrash is a constant timeout on macOS HISTORY:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.ResponsivenessTimerCrash
The test run doesn't give any details, unfortunately: Timeout TestWebKitAPI.WebKit.ResponsivenessTimerCrash
https://build.webkit.org/#/builders/377/builds/9020/steps/19/logs/stdio
http://commits.webkit.org/261382@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-09 10:43:59 PST
<
rdar://problem/106509558
>
Ryan Haddad
Comment 2
2023-03-17 09:59:02 PDT
***
Bug 253934
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 3
2023-03-21 14:31:30 PDT
***
Bug 254176
has been marked as a duplicate of this bug. ***
Miguel Salinas
Comment 4
2023-03-24 09:38:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11932
EWS
Comment 5
2023-03-30 17:20:46 PDT
Committed
262381@main
(857e02522abc): <
https://commits.webkit.org/262381@main
> Reviewed commits have been landed. Closing PR #11932 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug