[macOS] Fix TestWebKitAPI.WebKit.ResponsivenessTimerCrash timeout https://bugs.webkit.org/show_bug.cgi?id=253660 rdar://problem/106509558

Reviewed by Chris Dumez.

The ProcessThrottler is effectively disabled until didConnectToProcess()
is called. m_processIdentifier is 0 until didConnectToProcess(). Some OS
versions never call didConnectToProcess(). We should not return true for
isSuspended() when the ProcessThrottler is effectively disabled.

* Source/WebKit/UIProcess/ProcessThrottler.h:
(WebKit::ProcessThrottler::isSuspended const):

Canonical link: https://commits.webkit.org/262381@main